<resources>
    <string name="app_name">Stretch</string>
    <string name="button_start">START</string>
    <string name="button_stop">STOP</string>
    <string name="button_slow">SLOW</string>
    <string name="title">TrackTitle</string>
    <string name="artist">artist</string>
    <string name="duration">0:00</string>
    <string name="image">image</string>
    <string name="album_title">Album Title</string>
    <string name="artist_title">Artist Title</string>
    <string name="tracks">tracks</string>
    <string name="albums">albums</string>

    <string name="nav_libraries">ライブラリ</string>
    <string name="tracks_jpn">トラック</string>
    <string name="albums_jpn">アルバム</string>
    <string name="artists_jpn">アーティスト</string>
    <string name="playlists_jpn">プレイリスト</string>
    <string name="nav_application">アプリ</string>
    <string name="search">検索</string>
    <string name="tools">ツール</string>
    <string name="settings">設定</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Track</string>
    <string name="title_section3">Album</string>
    <string name="title_section4">Artist</string>
    <string name="home_screen">SAMPLE</string>
    <string name="back">BACK</string>
    <string name="st_sk">St/Sk</string>
    <string name="skip">SKIP</string>
    <string name="albumtitle">AlbumTitle</string>
    <string name="spinner">spinner</string>
    <string name="Tracks">Tracks</string>
    <string name="sample_player">BDM Sound Player</string>
    <string name="this_is_sample_application">This is Sample Application</string>
    <string name="music_stretch_player">Music Stretch Player</string>
    <string name="natsuki">natsuki</string>
    <string name="home">ホーム</string>
    <string name="outside">outside</string>
    <string name="album">album</string>
    <string name="track">track</string>

    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_next">&#xf050;</string>
    <string name="icon_back">&#xf049;</string>
    <string name="music">Music</string>
    <string name="outside_">Outside</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
</resources>
