<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/album_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/artist_list"/>

    <TextView
        android:text="@string/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:id="@+id/info1"/>

    <TextView
        android:text="@string/tracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:id="@+id/info2"/>

</LinearLayout>