<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/albumart"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="3dp"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:text="@string/album_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/artist"
                android:text="@string/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/tracks"
                android:text="@string/tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>