<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingRight="2dp" >

    <LinearLayout
        android:id="@+id/artist_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#fff" >

        <ImageView
            android:id="@+id/albumart"
            android:src="@mipmap/ic_launcher"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/title"
                android:text="@string/artist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:maxLines="2"
                android:textColor="#333"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#333" />

            <TextView
                android:id="@+id/albums"
                android:text="@string/albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="#333" />

            <TextView
                android:id="@+id/tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingBottom="3dp"
                android:text="@string/tracks"
                android:textColor="#333" />

            <Spinner
                android:id="@id/album_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" >

            </Spinner>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tracktitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="3dp"
        android:background="#fff"
        android:gravity="center"
        android:text="@string/Tracks"
        android:textColor="#333"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffffff" />

    <ListView android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="true" />

</LinearLayout>